# archimago-bot

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  COMMANDS.md  Makefile  README.md  TODO.md  curiosa.py  main.py  pyproject.toml  requirements.txt  util.py
.github/workflows/: test.yml
data/: config.toml  terms.toml
src/: __init__.py  browser.py  curiosa.py  discord.py  discord_client.py  trie.py  util.py
src/commands/: __init__.py  base.py  card.py  cimg.py  deck.py  faq.py  help.py  overlap.py  rulebook.py  term.py
test/: test_curiosa.py  test_trie.py  test_util.py
test/resources/: cards.json
