[project]
name = "archimago-bot"
version = "0.1.0"
description = "The wizard of the Finnish Sorcery TCG."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "chromedriver-autoinstaller>=0.6.4",
    "discord-py>=2.6.4",
    "dotenv>=0.9.9",
    "requests>=2.32.5",
    "selenium>=4.39.0",
    "typer>=0.21.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
